test/conformance/reject/inline_identifier_dash.hdoc
hdoc(version="2.0", lang="en");

p { \bad-name "ok" }
